<resources>
    <string name="app_name">Acessbility App</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="silahkan_login">Silahkan Login!</string>
    <string name="buat_akun_anda">Buat Akun Anda!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_feedback_menu">Feedback_Menu</string>
    <string name="beri_kami_masukan">Beri kami masukan!</string>
    <string name="beri_masukan">Beri masukan!</string>
    <string name="belum_dipencet">Belum dipencet</string>
    <string name="siapa_tau_masukan_anda_kami_terima">Siapa tau masukan anda kami terima!</string>
    <string name="heroes_name">Pahlawan</string>
    <string name="detail">Detail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with CardView</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
</resources>